--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "serve": "^11.3.2"
   },
   "scripts": {
